<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="mapnavigation_exit_title">Chiusura app</string>
    <string name="mapnavigation_exit_message">Sicuro di voler uscire?</string>
    <string name="mapnavigation_exit_yesbutton">Sì</string>
    <string name="mapnavigation_exit_nobutton">No</string>
    
    <string name="mapnavigation_download_title">Aggiornamento audioguide</string>
    <string name="mapnavigation_download_message">Vuoi scaricare tutte le audioguide adesso? Download di circa 50 MB.</string>
    <string name="mapnavigation_download_yesbutton">Sì, scarica tutto subito e non ci pensiamo più.</string>
    <string name="mapnavigation_download_nobutton">No, scelgo io quando e cosa scaricare.</string>
    
    <string name="hello">Hello World, AndroidBuildingMusicPlayerActivity!</string>
    <string name="app_name">SenaVetus AudioGuide</string>
    <string name="button_download">Download</string>
    <string name="button_play">Play</string>
    <string name="my_first_test">Inserisci del testo</string>
    <string name="edit_message">http://localhost:8080/audio/vienna01.mp3</string>
    <string name="edit_message_0">http://localhost:8080/audio/vienna01.mp3</string>
    <string name="edit_message_1">http://localhost:8080/audio/vienna02.mp3</string>
    <string name="edit_message_2">http://localhost:8080/audio/vienna01.mp3</string>
    <string name="edit_message_3">http://localhost:8080/audio/vienna02.mp3</string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_geo">GeoActivity</string>
<!-- 
    <string-array name="sports_array">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>Table Tennis</item>
        <item>Basket Ball</item>
        <item>Foot Ball</item>
        <item>Volley Ball</item>
        <item>Hockey</item>
        <item>Swimming</item>
    </string-array>
-->
    <string name="result_activity">ResultActivity</string>
    <string name="submit">Add To Playlist</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_list_item">MainActivity</string>
    <string name="image">Image</string>
    <string name="download">Download</string>
    <string name="title_activity_main1">MainActivity</string>
    <string name="title_activity_show_map">ShowMap</string>
     
     
     
    <string-array name="map_type_array">
        <item>normal</item>
        <item>hybrid</item>
        <item>terrain</item>        
    </string-array>
        <string name="poi_list_description">Elenco di tutti i punti di interesse</string>
        <string name="trail_list_description">Elenco dei percorsi consigliati</string>
        <string name="poi_download_description">Scarica gli audio mancanti</string>

</resources>