<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4a4a4a" >

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal"
        android:paddingTop="5dp" 
        android:paddingBottom="5dp" >

        <ImageButton
            android:id="@+id/btnPlaylist"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:layout_weight="1.32"
            android:background="@null"
            android:contentDescription="@string/poi_list_description"
            android:src="@drawable/ic_pois"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/btnTrails"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:layout_weight="1.72"
            android:background="@null"
            android:contentDescription="@string/trail_list_description"
            android:src="@drawable/ic_trail"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/btnPOIinfo"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/poi_download_description"
            android:src="@drawable/ic_download" />

    </LinearLayout>

<!-- http://www.vogella.com/tutorials/AndroidFragments/article.html
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar" />
-->
    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_below="@+id/toolbar"/>

    <!-- Player Footer -->

    <LinearLayout
        android:id="@+id/player_footer_bg"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@layout/bg_player_footer"
        android:gravity="center"
        android:visibility="gone" >

        <!-- Player Buttons -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@layout/rounded_corner"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <!-- Previous Button -->

            <ImageButton
                android:id="@+id/btnPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/btn_previous" />
            <!-- Backward Button -->

            <ImageButton
                android:id="@+id/btnBackward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/btn_backward" />
            <!-- Play Button -->

            <ImageButton
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/btn_play" />
            <!-- Forward Button -->

            <ImageButton
                android:id="@+id/btnForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/btn_forward" />
            <!-- Next Button -->

            <ImageButton
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/btn_next" />
        </LinearLayout>
    </LinearLayout>

    <!-- Progress Bar/Seek bar -->

    <SeekBar
        android:id="@+id/songProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/player_footer_bg"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:progressDrawable="@drawable/seekbar_progress"
        android:thumb="@drawable/seek_handler"
        android:visibility="gone" />

    <!-- Timer Display -->

    <LinearLayout
        android:id="@+id/timerDisplay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/songProgressBar"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone" >

        <!-- Current Duration Label -->

        <TextView
            android:id="@+id/songCurrentDurationLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="#eeeeee"
            android:textStyle="bold" />
        <!-- Total Duration Label -->

        <TextView
            android:id="@+id/songTotalDurationLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="#04cbde"
            android:textStyle="bold" />
    </LinearLayout>
    <ImageButton
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/adele"
        android:visibility="gone" />
</RelativeLayout>